--- a/requirements.txt
+++ b/requirements.txt
@@ -1,150 +1,261 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=1_llvm
-aiohttp=3.6.2=pypi_0
-alpaca-trade-api=0.48=pypi_0
-alpha-vantage=2.2.0=pypi_0
-async-timeout=3.0.1=pypi_0
-asyncio-nats-client=0.10.0=pypi_0
-attrs=19.3.0=pypi_0
-autobahn=20.6.2=pypi_0
-automat=20.2.0=pypi_0
-backcall=0.1.0=py38_0
-bleach=3.1.5=pypi_0
-ca-certificates=2020.6.20=hecda079_0
-certifi=2020.6.20=py38h32f6830_0
-cffi=1.14.0=pypi_0
-chardet=3.0.4=pypi_0
-constantly=15.1.0=pypi_0
-cryptography=2.9.2=pypi_0
-cycler=0.10.0=pypi_0
-dateparser=0.7.6=pypi_0
-decorator=4.4.2=py_0
-defusedxml=0.6.0=pypi_0
-deprecated=1.2.10=pypi_0
-entrypoints=0.3=py38_0
-finnhub-python=1.1.7=pypi_0
-flask=1.1.2=pypi_0
-flask-wtf=0.14.3=pypi_0
-hyperlink=19.0.0=pypi_0
-idna=2.10=pypi_0
-importlib-resources=1.5.0=pypi_0
-incremental=17.5.0=pypi_0
-ipykernel=5.1.4=py38h39e3cac_0
-ipython=7.13.0=py38h5ca1d4c_0
-ipython_genutils=0.2.0=py38_0
-ipywidgets=7.5.1=pypi_0
-itsdangerous=1.1.0=pypi_0
-jedi=0.17.0=py38_0
-jinja2=2.11.2=pypi_0
-joblib=0.15.1=pypi_0
-jsonschema=3.2.0=pypi_0
-jupyter_client=6.1.3=py_0
-jupyter_core=4.6.3=py38_0
-kiwisolver=1.2.0=pypi_0
-ld_impl_linux-64=2.33.1=h53a641e_7
-libblas=3.8.0=16_openblas
-libcblas=3.8.0=16_openblas
-libedit=3.1.20181209=hc058e9b_0
-libffi=3.3=he6710b0_1
-libgcc-ng=9.1.0=hdf63c60_0
-libgfortran-ng=7.5.0=hdf63c60_6
-liblapack=3.8.0=16_openblas
-libllvm9=9.0.1=he513fc3_1
-libopenblas=0.3.9=h5ec1e0e_0
-libsodium=1.0.16=h1bed415_0
-libstdcxx-ng=9.1.0=hdf63c60_0
-llvm-openmp=9.0.1=hc9558a2_2
-llvm-tools=9.0.1=he513fc3_1
-llvmdev=9.0.1=he513fc3_1
-llvmlite=0.33.0=py38h4f45e52_0
-loguru=0.5.1=pypi_0
-lxml=4.5.2=pypi_0
-markupsafe=1.1.1=pypi_0
-matplotlib=3.2.1=pypi_0
-mistune=0.8.4=pypi_0
-multidict=4.7.6=pypi_0
-multitasking=0.0.9=pypi_0
-mysqlclient=2.0.1=pypi_0
-nbconvert=5.6.1=pypi_0
-nbformat=5.0.7=pypi_0
-ncurses=6.2=he6710b0_1
-notebook=6.0.3=pypi_0
-numba=0.50.1=py38hcb8c335_1
-numpy=1.19.0=pypi_0
-openssl=1.1.1g=h516909a_0
-packaging=20.4=pypi_0
-pandas=1.0.4=pypi_0
-pandocfilters=1.4.2=pypi_0
-parso=0.7.0=py_0
-patsy=0.5.1=pypi_0
-pendulum=2.1.0=pypi_0
-pexpect=4.8.0=py38_0
-pickleshare=0.7.5=py38_1000
-pip=20.0.2=py38_3
-prometheus-client=0.8.0=pypi_0
-prompt-toolkit=3.0.4=py_0
-prompt_toolkit=3.0.4=0
-psutil=5.7.2=pypi_0
-psycopg2=2.8.5=pypi_0
-ptyprocess=0.6.0=py38_0
-pyasn1=0.4.8=pypi_0
-pyasn1-modules=0.2.8=pypi_0
-pycparser=2.20=pypi_0
-pygments=2.6.1=py_0
-pyhamcrest=2.0.2=pypi_0
-pyopenssl=19.1.0=pypi_0
-pyparsing=2.4.7=pypi_0
-pyrsistent=0.16.0=pypi_0
-python=3.8.3=hcff3b4d_0
-python-binance=0.7.5=pypi_0
-python-dateutil=2.8.1=py_0
-python_abi=3.8=1_cp38
-pytz=2020.1=pypi_0
-pytzdata=2019.3=pypi_0
-pyzmq=18.1.1=py38he6710b0_0
-readline=8.0=h7b6447c_0
-regex=2020.6.8=pypi_0
-requests=2.24.0=pypi_0
-scikit-learn=0.23.1=pypi_0
-scipy=1.4.1=pypi_0
-seaborn=0.10.1=pypi_0
-send2trash=1.5.0=pypi_0
-service-identity=18.1.0=pypi_0
-setuptools=46.4.0=py38_0
-six=1.14.0=py38_0
-sklearn=0.0=pypi_0
-sqlalchemy=1.3.18=pypi_0
-sqlite=3.31.1=h62c20be_1
-statsmodels=0.11.1=pypi_0
-stumpy=1.4.0=py_0
-sweetviz=1.0a4=pypi_0
-ta-lib=0.4.18=pypi_0
-terminado=0.8.3=pypi_0
-testpath=0.4.4=pypi_0
-threadpoolctl=2.1.0=pypi_0
-tk=8.6.8=hbc83047_0
-tornado=6.0.4=py38h7b6447c_1
-tqdm=4.46.1=pypi_0
-traitlets=4.3.3=py38_0
-twisted=20.3.0=pypi_0
-txaio=20.4.1=pypi_0
-tzlocal=2.1=pypi_0
-urllib3=1.24.3=pypi_0
-wcwidth=0.1.9=py_0
-webencodings=0.5.1=pypi_0
-websocket-client=0.57.0=pypi_0
-websockets=8.1=pypi_0
-werkzeug=1.0.1=pypi_0
-wheel=0.34.2=py38_0
-widgetsnbextension=3.5.1=pypi_0
-wrapt=1.12.1=pypi_0
-wtforms=2.3.1=pypi_0
-xz=5.2.5=h7b6447c_0
-yarl=1.4.2=pypi_0
-yfinance=0.1.54=pypi_0
-zeromq=4.3.1=he6710b0_3
-zlib=1.2.11=h7b6447c_3
-zope-interface=5.1.0=pypi_0
+alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-navigator==1.9.6
+anaconda-project==0.8.2
+asn1crypto==0.24.0
+astroid==2.1.0
+astropy==3.1
+atomicwrites==1.2.1
+attrs==19.1.0
+Babel==2.6.0
+backcall==0.1.0
+backports.os==0.1.1
+backports.shutil-get-terminal-size==1.0.0
+beautifulsoup4==4.6.3
+bitarray==0.8.3
+bkcharts==0.2
+blaze==0.11.3
+bleach==3.0.2
+bokeh==2.0.2
+boto==2.49.0
+Bottleneck==1.2.1
+branca==0.3.1
+cachetools==4.1.0
+certifi==2020.6.20
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+click-plugins==1.1.1
+cligj==0.5.0
+cloudpickle==0.6.1
+clyent==1.2.2
+colorama==0.4.1
+colorcet==2.0.2
+conda==4.8.3
+conda-build==3.17.6
+conda-package-handling==1.6.0
+conda-verify==3.1.1
+contextlib2==0.5.5
+cryptography==2.4.2
+cycler==0.10.0
+Cython==0.29.2
+cytoolz==0.9.0.1
+dash==1.0.2
+dash-core-components==1.0.0
+dash-daq==0.1.7
+dash-html-components==1.0.0
+dash-renderer==1.0.0
+dash-table==4.0.2
+dask==1.0.0
+datashape==0.5.4
+decorator==4.3.0
+defusedxml==0.5.0
+descartes==1.1.0
+distributed==1.25.1
+docutils==0.14
+EasyProcess==0.3
+entrypoint2==0.2.1
+entrypoints==0.2.3
+et-xmlfile==1.0.1
+fastcache==1.0.2
+filelock==3.0.10
+Fiona==1.8.4
+Flask==1.0.2
+Flask-Compress==1.4.0
+Flask-Cors==3.0.7
+fsspec==0.7.3
+future==0.17.1
+GDAL==2.3.3
+GeoAlchemy2==0.6.3
+geopandas==0.5.1
+gevent==1.3.7
+glob2==0.6
+gmpy2==2.0.8
+google-api-core==1.21.0
+google-api-python-client==1.9.3
+google-auth==1.18.0
+google-auth-httplib2==0.0.3
+googleapis-common-protos==1.52.0
+greenlet==0.4.15
+gspread==3.1.0
+h5py==2.9.0
+heapdict==1.0.0
+holoviews==1.13.2
+html5lib==1.0.1
+httplib2==0.13.0
+idna==2.8
+imageio==2.4.1
+imagesize==1.1.0
+importlib-metadata==0.6
+ipykernel==5.3.0
+ipython==7.2.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.4
+itsdangerous==1.1.0
+jdcal==1.4
+jedi==0.13.2
+jeepney==0.4
+Jinja2==2.10
+joblib==0.14.1
+json5==0.9.0
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+jupyterlab==0.35.3
+jupyterlab-server==0.2.0
+keyring==17.0.0
+kiwisolver==1.1.0
+lazy-object-proxy==1.3.1
+libarchive-c==2.8
+lief==0.9.0
+llvmlite==0.26.0
+locket==0.2.0
+lxml==4.2.5
+mapclassify==2.0.1
+Markdown==3.2.2
+MarkupSafe==1.1.0
+matplotlib==3.2.1
+mccabe==0.6.1
+mistune==0.8.4
+mkl-fft==1.0.10
+mkl-random==1.0.2
+mock==3.0.5
+more-itertools==4.3.0
+mpmath==1.1.0
+msgpack==0.5.6
+multipledispatch==0.6.0
+munch==2.3.2
+mysqlclient==1.4.1
+navigator-updater==0.2.1
+nbconvert==5.6.1
+nbformat==4.4.0
+networkx==2.2
+nltk==3.4
+nose==1.3.7
+notebook==5.7.4
+numba==0.41.0
+numexpr==2.6.8
+numpy==1.16.2
+numpydoc==0.8.0
+oauth2client==4.1.3
+odo==0.5.1
+olefile==0.46
+openpyxl==2.5.12
+packaging==18.0
+pandas==1.0.4
+pandocfilters==1.4.2
+panel==0.9.5
+param==1.9.3
+parso==0.3.1
+partd==0.3.9
+path.py==11.5.0
+pathlib2==2.3.3
+patsy==0.5.1
+pep8==1.7.1
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==5.3.0
+pkginfo==1.4.2
+plotly==4.8.1
+pluggy==0.8.0
+ply==3.11
+prometheus-client==0.5.0
+prompt-toolkit==2.0.7
+protobuf==3.12.2
+psutil==5.4.8
+ptyprocess==0.6.0
+py==1.7.0
+pyarrow==0.17.1
+pyasn1==0.4.5
+pyasn1-modules==0.2.5
+pycodestyle==2.4.0
+pycosat==0.6.3
+pycparser==2.19
+pycrypto==2.6.1
+pyct==0.4.6
+pycurl==7.43.0.2
+pyflakes==2.0.0
+Pygments==2.3.1
+pylint==2.2.2
+pyodbc==4.0.25
+pyOpenSSL==18.0.0
+pyparsing==2.4.0
+pyproj==1.9.6
+pyrsistent==0.16.0
+PySocks==1.6.8
+pytest==4.0.2
+pytest-arraydiff==0.3
+pytest-astropy==0.5.0
+pytest-doctestplus==0.2.0
+pytest-openfiles==0.3.1
+pytest-remotedata==0.3.1
+python-dateutil==2.8.0
+pytz==2019.1
+pyunpack==0.2.1
+pyviz-comms==0.7.5
+PyWavelets==1.0.1
+PyYAML==5.1.1
+pyzmq==19.0.0
+QtAwesome==0.5.3
+qtconsole==4.4.3
+QtPy==1.5.2
+requests==2.21.0
+retrying==1.3.3
+rope==0.11.0
+rsa==4.0
+Rtree==0.8.3
+ruamel-yaml==0.15.46
+scikit-image==0.14.1
+scikit-learn==0.20.1
+scipy==1.2.1
+seaborn==0.9.0
+SecretStorage==3.1.0
+Send2Trash==1.5.0
+Shapely==1.6.4.post1
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.12.0
+snowballstemmer==1.2.1
+sortedcollections==1.0.1
+sortedcontainers==2.1.0
+soupsieve==1.9.4
+Sphinx==1.8.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+sphinxcontrib-websupport==1.1.0
+spyder==3.3.2
+spyder-kernels==0.3.0
+SQLAlchemy==1.3.18
+statsmodels==0.9.0
+sympy==1.3
+tables==3.4.4
+tblib==1.3.2
+terminado==0.8.1
+testpath==0.4.2
+toolz==0.9.0
+tornado==5.1.1
+tqdm==4.28.1
+traitlets==4.3.2
+traittypes==0.2.1
+typing-extensions==3.7.4.2
+unicodecsv==0.14.1
+uritemplate==3.0.1
+urllib3==1.24.1
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.5.1
+wrapt==1.10.11
+wurlitzer==1.0.2
+xlrd==1.2.0
+XlsxWriter==1.1.2
+xlwt==1.3.0
+zict==0.1.3
+zipp==3.1.0
