--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ et-xmlfile==1.0.1
 fastcache==1.0.2
 filelock==3.0.10
 Fiona==1.8.4
-Flask==1.0.2
+Flask
 Flask-Compress==1.4.0
 Flask-Cors==3.0.7
 fsspec==0.7.3
@@ -128,7 +128,7 @@ mpmath==1.1.0
 msgpack==0.5.6
 multipledispatch==0.6.0
 munch==2.3.2
-mysqlclient==1.4.1
+mysqlclient
 navigator-updater==0.2.1
 nbconvert==5.6.1
 nbformat==4.4.0
@@ -138,14 +138,14 @@ nose==1.3.7
 notebook==5.7.4
 numba==0.41.0
 numexpr==2.6.8
-numpy==1.16.2
+numpy
 numpydoc==0.8.0
 oauth2client==4.1.3
 odo==0.5.1
 olefile==0.46
 openpyxl==2.5.12
 packaging==18.0
-pandas==1.0.4
+pandas
 pandocfilters==1.4.2
 panel==0.9.5
 param==1.9.3
@@ -165,7 +165,7 @@ ply==3.11
 prometheus-client==0.5.0
 prompt-toolkit==2.0.7
 protobuf==3.12.2
-psutil==5.4.8
+psutil
 ptyprocess==0.6.0
 py==1.7.0
 pyarrow==0.17.1
@@ -192,7 +192,7 @@ pytest-astropy==0.5.0
 pytest-doctestplus==0.2.0
 pytest-openfiles==0.3.1
 pytest-remotedata==0.3.1
-python-dateutil==2.8.0
+python-dateutil
 pytz==2019.1
 pyunpack==0.2.1
 pyviz-comms==0.7.5
@@ -202,7 +202,7 @@ pyzmq==19.0.0
 QtAwesome==0.5.3
 qtconsole==4.4.3
 QtPy==1.5.2
-requests==2.21.0
+requests
 retrying==1.3.3
 rope==0.11.0
 rsa==4.0
@@ -232,7 +232,7 @@ sphinxcontrib-serializinghtml==1.1.4
 sphinxcontrib-websupport==1.1.0
 spyder==3.3.2
 spyder-kernels==0.3.0
-SQLAlchemy==1.3.18
+SQLAlchemy
 statsmodels==0.9.0
 sympy==1.3
 tables==3.4.4
@@ -241,7 +241,7 @@ terminado==0.8.1
 testpath==0.4.2
 toolz==0.9.0
 tornado==5.1.1
-tqdm==4.28.1
+tqdm
 traitlets==4.3.2
 traittypes==0.2.1
 typing-extensions==3.7.4.2
@@ -259,3 +259,12 @@ XlsxWriter==1.1.2
 xlwt==1.3.0
 zict==0.1.3
 zipp==3.1.0
+
+psycopg2
+loguru
+pendulum
+APScheduler
+Twisted
+yfinance
+yahooquery
+websockets
